# prisma-client-uniffi

./: Cargo.toml  LICENSE  README.md
example/: .gitignore  Package.swift  build_xcframework.sh
example/app/: Cargo.toml
example/app/.cargo/: config.toml
example/app/prisma/: schema.prisma
example/app/src/: lib.rs  main.rs  prisma-uniffi.rs  prisma_uniffi.rs
example/app/src/prisma_uniffi/: prisma.rs
example/cli/: Cargo.toml
generator/: Cargo.toml
generator/src/: lib.rs
lib/: Cargo.toml
