[workspace]
members = [
  "example/app",
  "example/cli",
  "example/uniffi-bindgen",
  "generator"
]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-sdk = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
uniffi = { version = "0.26.0"}
thiserror = "1.0.56"
serde = { version = "1.0.196" }