[package]
name = "prisma-client-uniffi-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-sdk = { workspace = true }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"