[package]
name = "prisma-client-uniffi-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
uniffi = { workspace = true, features = ["tokio"] }
prisma-client-rust = { workspace = true, features = ["mysql", "migrations"] }
prisma-client-rust-cli = { workspace = true, features = ["mysql", "migrations"] }
async-compat = "0.2.2"
serde = { workspace = true }

[lib]
crate-type = ["cdylib"]
name = "prisma_client_uniffi_example"